--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Language Highlighter 1",
+  "name": "Language Highlighter",
   "version": "1.0",
   "description": "Highlights phrases from a central database on any web page.",
   "permissions": [
@@ -37,7 +37,8 @@
       "16": "icon.png",
       "48": "icon.png",
       "128": "icon.png"
-    }
+    },
+    "default_popup": "popup.html"
   },
   "icons": {
     "16": "icon.png",
